14. Create Json web token for User
