# backend/api/routes/routes.go
@@ -1,0 +1,14 @@
+package routes
+
+import (
+	"server/validaton"
+
+	"github.com/gofiber/fiber/v2"
+	"server/controller"
+)
+
+
+func SetupRoutes(app *fiber.App){
+	//auth
+	app.Post("/user/signup", validaton.ValidateUser, controller.Register)
+}
